src/test/ui/error-codes/E0522.stderr
error[E0601]: main function not found

error[E0522]: definition of an unknown language item: `cookie`
  --> $DIR/E0522.rs:13:1
   |
13 | #[lang = "cookie"]
   | ^^^^^^^^^^^^^^^^^^ definition of unknown language item `cookie`

error: aborting due to 2 previous errors

